Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94763

[CoAP] When resource is observed the QT CoAP client sends an acknowledgement packet which is not empty.

XMLWordPrintable

    • e40563354fdbda99783a53c34defedc93550a066 (qt/qtcoap/dev) 547c50d9cb17a1edbf1fd39b77993da6831a7d4e (qt/qtcoap/6.2) b4a9a413f24c965344e96dfd35dc3bd1298f5c4e (qt/qtcoap/6.1) 7d3f502341766efe907aaba3a79fc26c51d2b638 (qt/tqtc-qtcoap/5.15)

      The Qt CoAP client sends an acknowledgement packet with CoAP code 0 which should be empty as per RFC 7252. (https://datatracker.ietf.org/doc/html/rfc7252#section-12.1). The CoAP server is treating this as a malformed packet.

      This can be reproduced with the Qt example simplecoapclient and a coap server like the coapserver example in libcoap (https://github.com/obgm/libcoap).

      To reproduce start the coapserver example and the simplecoapclient. Set the host as "::1" and resource as /time and start to observe. The server will discard the ack packages as malformed PDU and write a log to the output.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sonakur Sona Kurazyan
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes